mustache-cli/test/errors/render-errors.t/invalid-dotted-name-1.mustache
Title: {{title}}

List:
{{#list}}
  - {{data}}
{{/list}}

Group:
{{#group}}
  {{gro.first}}
  {{second}}
{{/group}}

{{#name}}The variable "name" has value "{{name}}".{{/name}}
{{^name}}The variable "name" is not set. {{/name}}

Last line.